Fix layout shift cause by canvas creation

--- a/src/styles/index/sketch.css
+++ b/src/styles/index/sketch.css
@@ -2,4 +2,5 @@
     padding: 2rem 0;
     display: flex;
     justify-content: center;
+    min-height: 90vmin;
 }
